--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
     sdk: flutter
 
   flutter_bloc: ^7.0.0
+  flutter_svg: ^0.22.0
   freezed_annotation: ^0.14.1
   get_it: ^6.1.1
   google_fonts: ^2.0.0
@@ -72,12 +73,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: OpenSans
-      fonts:
-        - asset: assets/fonts/OpenSans-Regular.ttf
-        - asset: assets/fonts/OpenSans-Italic.ttf
-          style: italic
+  # fonts:
+  #   - family: OpenSans
+  #     fonts:
+  #       - asset: assets/fonts/OpenSans-Regular.ttf
+  #       - asset: assets/fonts/OpenSans-Italic.ttf
+  #         style: italic
   # - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
